# lamure

./: .gitignore  CMakeLists.txt
apps/points_to_lines_obj_exporter/: CMakeLists.txt  alpha-shapes_wrapper.h  alpha_shapes_wrapper.h  binning.cpp  binning.h  clustering.cpp  clustering.h  color_hash_map.hpp  core.cpp  core.h  input_output.h  line_gen.cpp  line_gen.h  main.cpp  math_wrapper.cpp  math_wrapper.h  nurbscurve.hpp  nurbscurve_impl.hpp  point.hpp  point_impl.hpp  sampling.cpp  sampling.h  utils.h
npr_processing/: CMakeLists.txt
npr_processing/include/lamure/npr/: alpha_shapes_wrapper.h  binning.h  clustering.h  color_hash_map.h  core.h  input_output.h  line_gen.h  nurbscurve.h  nurbscurve_impl.h  point.h  point_impl.h  sampling.h  utils.h
npr_processing/src/: binning.cpp  clustering.cpp  color_hash_map.cpp  core.cpp  input_output.cpp  line_gen.cpp  sampling.cpp  utils.cpp
rendering/shaders/: lq_one_pass.glslv
scripts/: bvh_to_obj_OR_xyzall_processing_IE.sh  lamure_combined_line_art_creator.sh
